<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.home.achyu.hw05.Details">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            android:id="@+id/location_details_label"
            android:textSize="17sp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/location_details_value"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="180sp"
        android:layout_height="90sp"
        android:id="@+id/image_details"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/temperature_value_details"
        android:layout_below="@+id/image_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/condition_value_details"
        android:layout_below="@+id/temperature_value_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_temp"
        android:id="@+id/max_temp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/condition_value_details"
        android:layout_marginLeft="60dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_temp"
        android:id="@+id/min_temp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/max_temp"
        android:layout_alignLeft="@+id/max_temp"
        android:layout_alignStart="@+id/max_temp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/maxtemp_value"
        android:layout_alignBottom="@+id/max_temp"
        android:layout_alignLeft="@+id/condition_value_details"
        android:layout_alignStart="@+id/condition_value_details"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginLeft="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/mintemp_value"
        android:layout_alignBottom="@+id/min_temp"
        android:layout_alignLeft="@+id/maxtemp_value"
        android:layout_alignStart="@+id/maxtemp_value"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="?android:listSeparatorTextViewStyle"
        android:layout_below="@+id/min_temp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/black"
        android:layout_marginTop="20dp"
        android:id="@+id/line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_like"
        android:id="@+id/feels_label"
        android:layout_below="@+id/line"
        android:layout_toLeftOf="@+id/temperature_value_details"
        android:layout_toStartOf="@+id/temperature_value_details"
        android:layout_marginTop="29dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/feels_value"
        android:layout_alignTop="@+id/feels_label"
        android:layout_alignLeft="@+id/mintemp_value"
        android:layout_alignStart="@+id/mintemp_value"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:id="@+id/humidity_label"
        android:layout_below="@+id/feels_label"
        android:layout_alignLeft="@+id/feels_label"
        android:layout_alignStart="@+id/feels_label"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dew_point"
        android:id="@+id/dewpoint_label"
        android:layout_below="@+id/humidity_label"
        android:layout_alignLeft="@+id/humidity_label"
        android:layout_alignStart="@+id/humidity_label"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:id="@+id/pressure_label"
        android:layout_below="@+id/dewpoint_label"
        android:layout_alignLeft="@+id/dewpoint_label"
        android:layout_alignStart="@+id/dewpoint_label"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clouds"
        android:id="@+id/clouds_label"
        android:layout_below="@+id/pressure_label"
        android:layout_alignLeft="@+id/pressure_label"
        android:layout_alignStart="@+id/pressure_label"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winds"
        android:id="@+id/winds_label"
        android:layout_below="@+id/clouds_label"
        android:layout_alignLeft="@+id/clouds_label"
        android:layout_alignStart="@+id/clouds_label"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/humidity_value"
        android:layout_alignTop="@+id/humidity_label"
        android:layout_alignLeft="@+id/feels_value"
        android:layout_alignStart="@+id/feels_value"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/dew_value"
        android:layout_alignTop="@+id/dewpoint_label"
        android:layout_alignLeft="@+id/humidity_value"
        android:layout_alignStart="@+id/humidity_value"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/pressure_value"
        android:layout_alignTop="@+id/pressure_label"
        android:layout_alignLeft="@+id/dew_value"
        android:layout_alignStart="@+id/dew_value"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/clouds_value"
        android:layout_alignTop="@+id/clouds_label"
        android:layout_alignLeft="@+id/pressure_value"
        android:layout_alignStart="@+id/pressure_value"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/winds_value"
        android:layout_alignTop="@+id/winds_label"
        android:layout_alignLeft="@+id/clouds_value"
        android:layout_alignStart="@+id/clouds_value"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:id="@+id/previous"
        android:layout_gravity="left"
        android:src="@drawable/arrow_left"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:id="@+id/next"
        android:src="@drawable/arrow_right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
